<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".petdetails.PetDetailsFragment"
    tools:showIn="@layout/activity_pet_details">

    <TextView
        android:id="@+id/pet_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Doggy"
        />

    <TextView
        android:id="@+id/pet_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Available"
        />


</LinearLayout>
